# agentic-toolkit

./: .gitignore  LANGGRAPH_COMPLIANCE_REPORT.md  LICENSE  README.md  RELEASE_NOTES.md  UPGRADE.md
.claude-plugin/: marketplace.json
plugins/dev-practices/.claude-plugin/: plugin.json
plugins/dev-practices/agents/: review-consistency.md  review-disease-scan.md  review-dry.md  review-layering.md  review-python-practices.md  review-testing.md
plugins/dev-practices/skills/code-review/: SKILL.md
plugins/dev-practices/skills/dev-practices-code-review/: SKILL.md
plugins/dev-practices/skills/dev-practices-execute/: SKILL.md
plugins/langgraph-dev/: .gitignore  README.md
plugins/langgraph-dev/.claude-plugin/: plugin.json
plugins/langgraph-dev/agents/: workflow-validator.md
plugins/langgraph-dev/commands/: create-agent.md  create-deployment.md  create-state.md  create-tests.md  create-workflow.md
plugins/langgraph-dev/examples/: langgraph-dev.local.md.example
plugins/langgraph-dev/skills/langgraph-dev-deployment-patterns/examples/platform-deployment-demo/: .env.example  README.md  client_example.py  cron_example.py  pyproject.toml
plugins/langgraph-dev/skills/langgraph-dev-deployment-patterns/examples/platform-deployment-demo/src/: __init__.py  graph.py
plugins/neograph-dev/.claude-plugin/: plugin.json
plugins/pi-dev/.claude-plugin/: plugin.json
plugins/plugin-qa/.claude-plugin/: plugin.json
plugins/qa-bdd/.claude-plugin/: plugin.json
plugins/qa-bdd/ast-grep-rules/: bdd-no-ctx-get-env.yml  bdd-no-error-fabrication.yml  bdd-no-hasattr-env.yml
(+153 files in other folders)
